[project]
name = "rct-inverter-dashboard"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pyyaml>=6.0.2",
    "rctclient>=0.0.3",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "rich>=14.2.0",
    "streamlit>=1.52.2",
    "streamlit-autorefresh>=1.0.1",
]
