[project]
name = "rct-inverter-monitor"
version = "0.0.1"
description = "This project is a Python application that reads data from RCT power inverters via TCP."
authors = [{ name = "Philipp Thümler", email = "philipp.thuemler@outlook.de" }]
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "rctclient>=0.0.3",
]

[project.scripts]
rct-inverter-monitor = "rct_inverter_monitor:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["streamlit>=1.52.2", "streamlit-autorefresh>=1.0.1"]
